# FurEver

./: MANIFEST.in  README.md  SOP_Manufacturing_Remanufacturing.md  license.txt  pyproject.toml  requirements.txt  setup.py
kennel_management/: api.py  hooks.py  modules.txt  notifications.py  permissions.py  tasks.py
kennel_management/config/: __init__.py  desktop.py
kennel_management/events/: admission.py  adoption.py  animal.py  veterinary.py
kennel_management/public/css/: kennel_chatbot.css
kennel_management/public/js/: kennel_chatbot.js  kennel_redirect.js
kennel_management/templates/: sms_templates.py
kennel_management/templates/emails/: adoption_status_update.html  appointment_reminder.html  base_template.html  daily_summary.html  donation_receipt.html  (+1 more)
kennel_management/utils/: adopter_education.py  adoption_scoring.py  ai_actions.py  ai_analytics.py  ai_content.py  ai_matching.py  campaign_builder.py  capacity_forecasting.py  daily_briefing.py  enrichment_scheduler.py  event_management.py  intake_triage.py  inventory_management.py  jinja_methods.py  lost_pet_alerts.py  medical_timeline.py  messaging.py  multi_shelter.py  petfinder_sync.py  photo_lookup.py  public_api.py  survey_system.py  training_tracker.py  volunteer_scheduling.py  weekly_report.py
kennel_management/www/: adopter-education.html  adoption-application-submitted.html  ask-scout.html  available-animals.html  donation-received.html  events.html  foster-application-submitted.html  foster-portal.html  lost-and-found-submitted.html  volunteer-signup-submitted.html
(+124 files in other folders)
