[project]
name = "kennel_management"
version = "1.1.0"
description = "Comprehensive SPCA Kennel Management System"
authors = [
    { name = "SPCA", email = "admin@spca.org" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0"
